NO-JIRA Fixing quality gate